2008-06-20  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/tvtime/vfir.c: (deinterlace_line_mmxext),
	(deinterlace_line_c), (deinterlace_scanline_vfir):
	Make it possible to use the vfir method on X86 CPUs without MMXEXT too
	but use the MMXEXT optimized code whenever possible.

2008-06-20  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/gstdeinterlace2.c:
	(gst_deinterlace2_class_init), (gst_deinterlace2_init),
	(gst_deinterlace2_reset_history), (gst_deinterlace2_reset),
	(gst_deinterlace2_finalize), (gst_deinterlace2_chain),
	(gst_deinterlace2_sink_event), (gst_deinterlace2_change_state),
	(gst_deinterlace2_src_query):
	* gst/deinterlace2/gstdeinterlace2.h:
	Reset element state on PAUSED->READY properly, don't leak any buffers
	when finalizing, allocate buffers with gst_pad_alloc_buffer() and
	properly return flow returns from gst_pad_push() instead of ignoring them.

2008-06-20  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/tvtime/tomsmocomp/tomsmocompmacros.h:
	Add missing header.

2008-06-20  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	* gst/deinterlace2/Makefile.am:
	* gst/deinterlace2/tvtime/greedyh.asm:
	* gst/deinterlace2/tvtime/tomsmocomp/SearchLoopBottom.inc:
	Fix compilation on generic x86/amd64 and include deinterlace2 in the
	build system. Because of several bugs it's still enabled only
	by --enable-experimental.

2008-06-20  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/resindvd/resindvdsrc.c:
	* ext/resindvd/resindvdsrc.h:
	Schedule NAV packets and activate them with an async clock callback
	at the right moment. This makes delayed menu highlights appear
	at the correct time and fixes Back To The Future.

	When outputting new segment in do_seek(), calculate our position
	value properly, so we report the right time when popping in and
	out of the menus.

	* ext/resindvd/rsnbasesrc.c:
	When handling a non-flushing seek, accumulate the segment,